# diffusion

./: README.md
Diffusion1D/: 1d  1d_limiter  CMakeLists.txt  diffusion.f90  heat.f90.bak  namelist.input  plot  plot.gp  plot.py  plot2.gp  plot_amplification.py
Diffusion1D/src/: diffusion_flux_limiter.f90  history_mod.F90  main.F90  mesh_mod.F90  namelist_mod.F90  scheme_mod.F90  state_mod.F90
Diffusion2D/: CMakeLists.txt
Diffusion2D/run/: diffusion.050.0000.nc  diffusion.050.0001.nc  diffusion.050.0002.nc  diffusion.050.0003.nc  diffusion.050.0004.nc  diffusion.050.0005.nc  diffusion.050.0006.nc  diffusion.050.0007.nc  diffusion.050.0009.nc  diffusion.050.0010.nc  namelist.input  plot.py
Diffusion2D/src/: boundary_mod.F90  diffusion_limiter.f90  diffusion_limiter2.f90  diffusion_main.f90  history_mod.F90  main.F90  mesh_mod.F90  namelist_mod.F90  scheme_mod.f90  state_mod.F90
Diffusion2D/tools/: plot_data.py
